--- a/app/src/main/res/layout/fragment_tuesday.xml
+++ b/app/src/main/res/layout/fragment_tuesday.xml
@@ -6,9 +6,9 @@
     tools:context=".Fragments.TuesdayFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+    <ListView
+        android:id="@+id/tuesdaylist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
