--- a/app/src/main/res/layout/fragment_wednesday.xml
+++ b/app/src/main/res/layout/fragment_wednesday.xml
@@ -6,9 +6,9 @@
     tools:context=".Fragments.WednesdayFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/wednesdaylist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
