--- a/app/src/main/res/layout/fragment_wednesday.xml
+++ b/app/src/main/res/layout/fragment_wednesday.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.WednesdayFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <ListView
         android:id="@+id/wednesdaylist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent"
+        android:listSelector="@android:color/transparent"
+        android:cacheColorHint="@android:color/transparent"
+        android:divider="@null"
+        />
 </FrameLayout>
