--- a/app/src/main/res/menu/toolbar_action_mode.xml
+++ b/app/src/main/res/menu/toolbar_action_mode.xml
@@ -3,12 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
-    <!--  Toolbar ActionMode Menu Items  -->
-
     <item
         android:id="@+id/action_delete"
         android:icon="@drawable/baseline_delete_forever_white_24"
         android:orderInCategory="100"
         android:title="@string/delete"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_edit"
+        android:icon="@drawable/baseline_edit_white_24"
+        android:orderInCategory="100"
+        android:title="@string/edit"
         app:showAsAction="always" />
 </menu>
