--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -2,18 +2,19 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#CABBBBBB" />
-            <corners android:radius="2dp" />
+            <solid android:color="@color/colorPrimaryDark" />
+            <corners android:radius="5dp" />
         </shape>
     </item>
 
     <item
-        android:bottom="1dp"
+        android:bottom="5dp"
         android:left="1dp"
         android:right="1dp"
         android:top="1dp">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
+            <corners android:radius="5dp" />
         </shape>
     </item>
 </layer-list>
