Added Homeworks activity, Homeworks table in Database and small changes
There is incompleted logic here. Currently I'm working on it.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,4 +10,11 @@
             android:title="@string/week" />
     </group>
 
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/homework"
+            android:icon="@drawable/ic_menu_share"
+            android:title="@string/homeworks" />
+    </group>
+
 </menu>
