--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_weight="2"
+        android:layout_width="25dp"
+        android:layout_height="match_parent" />
+
     <include
         layout="@layout/app_bar_main"
         android:layout_width="match_parent"
