--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
+
+    <item
+        android:id="@+id/weeksettings"
+        android:title="7 days of the week"
+        android:icon="@drawable/baseline_settings_black_18"
+        app:actionLayout="@layout/layout_switch"
+        />
 
     <group android:checkableBehavior="single">
         <item
@@ -13,7 +21,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/homework"
-            android:icon="@drawable/ic_menu_share"
+            android:icon="@drawable/baseline_list_black_18"
             android:title="@string/homeworks" />
     </group>
 
