--- a/app/src/main/res/layout/listview_homeworks_adapter.xml
+++ b/app/src/main/res/layout/listview_homeworks_adapter.xml
@@ -42,14 +42,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="5dp"
             android:text="Date"
             android:textAlignment="center"
-            android:textAllCaps="true"
+            android:textAllCaps="false"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/descriptionhomework"
-            app:layout_constraintStart_toStartOf="@+id/descriptionhomework"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/timeimage"
             app:layout_constraintTop_toBottomOf="@+id/descriptionhomework" />
 
         <ImageView
@@ -69,7 +71,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="DESCRIPTION"
+            android:text="Description"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textSize="18sp"
